[package]
name = "winrt_bluetooth_bindings"
version = "0.0.1"
authors = ["Andrew Gilbrough <andrew@gilbrough.com>"]
edition = "2018"
description = "winrt imports for `windows::devices::bluetooth::*`.  For use in the `btle` library."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = "0.7.2"
